table and datepicker zindex updated

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ p {
 
 /*===== All Pagination Style =====*/
 
-.pagination {
+/*.pagination {
     margin-top: 60px;
 }
 
@@ -349,7 +349,7 @@ p {
     color: #fff;
     border-color: #f9c540;
 }
-
+*/
 
 /*===========================
      02.Header css 
